RESOLVED FIXED164843
ExceptionFuzz needs to placate exception check verification before overwriting a thrown exception.
https://bugs.webkit.org/show_bug.cgi?id=164843
Summary ExceptionFuzz needs to placate exception check verification before overwritin...
Mark Lam
Reported 2016-11-16 16:43:10 PST
Patch and details coming.
Attachments
proposed patch. (2.47 KB, patch)
2016-11-16 16:48 PST, Mark Lam
no flags
Mark Lam
Comment 1 2016-11-16 16:48:13 PST
Created attachment 295000 [details] proposed patch.
WebKit Commit Bot
Comment 2 2016-11-16 16:49:47 PST
Attachment 295000 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:13: Please consider whether the use of security-sensitive phrasing could help someone exploit WebKit: fuzzing, fuzz test [changelog/unwantedsecurityterms] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Keith Miller
Comment 3 2016-11-16 16:53:37 PST
Comment on attachment 295000 [details] proposed patch. r=me.
WebKit Commit Bot
Comment 4 2016-11-16 17:34:37 PST
Comment on attachment 295000 [details] proposed patch. Clearing flags on attachment: 295000 Committed r208834: <http://trac.webkit.org/changeset/208834>
WebKit Commit Bot
Comment 5 2016-11-16 17:34:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.